apps/base/firefly-iii/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii-db
spec:
  clusterIP: None # Headless service
  ports:
    - port: 5432
  selector:
    app: firefly-iii-db
